<resources>
    <string name="app_name">끄적끄적</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="title">제목</string>
    <string name="contents">내용</string>
    <string name="created_date">생성일:</string>
    <string name="modified_date">수정일:</string>
    <string name="image_view_description">ImageView</string>
    <string name="picture_from">사진 가져오기</string>
    <string name="from_gallery">갤러리에서 가져오기</string>
    <string name="from_url">URL에서 가져오기</string>
    <string name="ask_delete">삭제할까요?</string>
    <string name="warning_wrong_url">잘못된 URL 입니다.</string>
</resources>
