<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_save"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item android:title="@string/get_picture"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="ifRoom" >
        <!-- sub menu -->
        <menu>
            <item android:id="@+id/menu_gallery"
                android:title="@string/from_gallery"
                android:icon="@android:drawable/ic_menu_gallery"/>
            <item
                android:id="@+id/menu_url"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/from_url" />
        </menu>
    </item>


</menu>